syntax = "proto3";

package snapshots;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/snapshots/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromDiskRequest {
    types.Disk SrcDisk = 1;
    string DstSnapshotId = 2;
    string FolderId = 3;
    bool Incremental = 4;
    string OperationCloudId = 5;
    string OperationFolderId = 6;
    bool UseDataplaneTasks = 7;
    bool UseS3 = 8;
}

message CreateSnapshotFromDiskTaskState {
    CreateSnapshotFromDiskRequest Request = 1;
    int64 Offset = 2;
    double Progress = 3;
    int64 SnapshotSize = 4;
    int64 SnapshotStorageSize = 5;
    string DataplaneTaskID = 6;
}
